k8s/17-ingress/grafana-prometheus-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: "grafana.gauravtest.store"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: grafana
                port:
                  number: 3000
    - host: "prometheus.gauravtest.store"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-k8s
                port:
                  number: 9090
